# react-native-live-pitch-detection

./: .gitignore  .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  ReactNativeLivePitchDetection.podspec  eslint.config.mjs  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml
android/: build.gradle  gradle.properties
android/src/main/java/com/techoptio/reactnativelivepitchdetection/: ReactNativeLivePitchDetectionModule.kt  ReactNativeLivePitchDetectionPackage.kt
android/src/main/java/io/techopt/lib/reactnativelivepitchdetection/: ReactNativeLivePitchDetectionModule.kt  (+1 more)
android/src/main/jni/: CMakeLists.txt  cpp-adapter.cpp
example/: Gemfile  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ReactNativeLivePitchDetectionExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeLivePitchDetectionExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeLivePitchDetectionExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeLivePitchDetectionExample.xcscheme
example/ios/ReactNativeLivePitchDetectionExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: ReactNativeLivePitchDetection.h  ReactNativeLivePitchDetection.mm
shared/: ReactNativeLivePitchDetectionModule.cpp  ReactNativeLivePitchDetectionModule.h
shared/tests/: CMakeLists.txt  auto_correlate_test.cpp
src/: NativeReactNativeLivePitchDetection.ts  index.tsx  pitch.ts  types.ts
src/__mocks__/: NativeReactNativeLivePitchDetection.ts
src/__tests__/: index.test.tsx  pitch.test.ts
(+2 files in other folders)
